--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
     "react-dom": "18.2.0",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
-  }
+  },
+  "browserslist": [
+    "chrome 64",
+    "edge 79",
+    "firefox 67",
+    "opera 51",
+    "safari 12"
+  ]
 }
